improved world selection

--- a/www/ui.html
+++ b/www/ui.html
@@ -176,7 +176,15 @@
              <h3>path finding</h3>
              
              <h4>start position</h4>
-             x: <input id="sx" value="2155" class="short"> y: <input id="sy" value="3618" class="short"> z: <input id="sz" value="0" class="short"> world: <input id="world" value="0" class="short">
+             x: <input id="sx" value="2155" class="short"> y: <input id="sy" value="3618" class="short"> z: <input id="sz" value="0" class="short"> 
+             world: <select id="world">
+                <option value="0">Felluca</option>
+                <option value="1">Trammel</option>
+                <option value="2">Ilshenar</option>
+                <option value="3">Malas</option>
+                <option value="4">Tokuno</option>
+                <option value="5">Ter Mur</option>
+            </select>
              
              <h4>end position</h4>
              x: <input id="dx" value="3425" class="short"> y: <input id="dy" value="105" class="short"> z: <input id="dz" value="0" class="short">
